--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -136,13 +136,6 @@ body {
 
 /*DROPZONE*/
 
-:root {
-    --primary: #111926;
-    --white: #fff;
-    --background: #F8F8FF;
-    --gray: #D3D3D3;
-}
-
 .dropzone-box {
     border-radius: 2rem;
     padding: 2rem;
@@ -152,7 +145,7 @@ body {
     flex-direction: column;
     max-width: 36rem;
     width: 100%;
-    background-color: var(--white);
+    background-color: var($dropzonewhite);
     h2 {
         font-size: 2rem;
         margin-bottom: 0.5rem;
@@ -167,9 +160,9 @@ body {
         justify-content: center;
         align-items: center;
         flex-direction: column;
-        border: 2px dashed var(--primary);
+        border: 2px dashed var($dropzoneprimary);
         border-radius: 1rem;
-        color: var(--primary);
+        color: var($dropzoneprimary);
         cursor: pointer;
         [type="file"] {
             cursor: pointer;
@@ -185,13 +178,13 @@ body {
                 height: 5rem;
                 width: 5rem;
                 margin-bottom: 0.5rem;
-                stroke: var(--primary);
+                stroke: var($dropzoneprimary);
             }
         }
     }
     .dropzone--over {
         border-style: solid;
-        background-color: var(--background);
+        background-color: var($dropzonebackground);
     }
     .dropzone-actions {
         display: flex;
@@ -214,15 +207,15 @@ body {
             border: 1px solid var(--gray);
             border-radius: 0.5rem;
             padding: 0.5rem 1rem;
-            color: var(--primary);
+            color: var($dropzoneprimary);
             cursor: pointer;
         }
         button[type='submit'] {
-            background-color: var(--primary);
-            border: 1px solid var(--primary);
+            background-color: var($dropzoneprimary);
+            border: 1px solid var($dropzoneprimary);
             border-radius: 0.5rem;
             padding: 0.5rem 1rem;
-            color: var(--white);
+            color: var($dropzonewhite);
             cursor: pointer;
         }
     }
@@ -230,3 +223,130 @@ body {
 
 
 /*DROPZONE END*/
+
+
+/*DROPZONE 2*/
+
+:root {
+    --primary: #8800ff;
+    --primary-hover: #6c00ca;
+    --bg: #111315;
+    --secondary: #262626;
+    --secondary-hover: #383838;
+    --dropzone-bg: #1A1C1E;
+    --gray: #D3D3D3;
+    --border: #333333;
+    --dropzone-border: #FFF;
+    --headline: #FFF;
+    --text: #FFF;
+    --primary-text: #F2F7FE;
+    --dropzone-over: var(--secondary);
+}
+
+*::selection {
+    background: var(--primary);
+    color: var(--btn-text);
+}
+
+.dropzone-box-dark {
+    border-radius: 1rem;
+    padding: 2rem;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    max-width: 36rem;
+    border: 1px solid var(--border);
+    width: 100%;
+    background: var(--dropzone-bg);
+    h2 {
+        font-size: 1.4rem;
+        margin-bottom: 0.6rem;
+        color: var(--headline);
+    }
+    p {
+        font-size: 1.15rem;
+        color: var(--gray);
+    }
+    .dropzone-area-dark {
+        padding: 1rem;
+        position: relative;
+        margin-top: 1.5rem;
+        min-height: 16rem;
+        display: flex;
+        text-align: center;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+        border: 2px dashed var(--dropzone-border);
+        border-radius: 1rem;
+        cursor: pointer;
+        transition: all 0.3s ease;
+        .file-info {
+            font-size: 1.1rem;
+        }
+        [type="file"] {
+            cursor: pointer;
+            position: absolute;
+            opacity: 0;
+            top: 0;
+            right: 0;
+            bottom: 0;
+            left: 0;
+        }
+        .file-upload-icon {
+            svg {
+                height: 6rem;
+                max-width: 6rem;
+                width: 100%;
+                margin-bottom: 0.5rem;
+                stroke: var(--headline);
+            }
+        }
+        &:hover {
+            background: var(--dropzone-over);
+        }
+    }
+    .dropzone--over {
+        border: 2px solid var(--primary);
+        background: var(--dropzone-over);
+    }
+    .dropzone-actions {
+        display: flex;
+        justify-content: space-between;
+        margin-top: 2rem;
+        gap: 1rem;
+        flex-wrap: wrap;
+        button {
+            flex-grow: 1;
+            min-height: 3rem;
+            font-size: 1.2rem;
+            border: none;
+            transition: background 0.3s ease;
+        }
+        button[type='reset'] {
+            border-radius: 0.5rem;
+            padding: 0.5rem 1rem;
+            color: var(--text);
+            background: var(--secondary);
+            cursor: pointer;
+            border: 1px solid var(--border);
+        }
+        button[type='reset']:hover {
+            background: var(--secondary-hover);
+        }
+        button[type='submit'] {
+            background: var(--primary);
+            border-radius: 0.5rem;
+            padding: 0.5rem 1rem;
+            color: var(--primary-text);
+            border: none;
+            cursor: pointer;
+        }
+        button[type='submit']:hover {
+            background: var(--primary-hover);
+        }
+    }
+}
+
+
+/*DROPZONE 2 END*/
